--- a/CRM_Dashboard.html
+++ b/CRM_Dashboard.html
@@ -52,7 +52,7 @@
                             <a class="nav-link dropdown-toggle header_text_right" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               <span class="d-none d-sm-flex">valdis@domain.com</span> 
                               <img class="d-none d-sm-flex" src="assets/images/header_dropdown_arrow_top.svg">
-                              <div class="d-flex align-items-center ml-3"><img src="assets/images/svg/header_user_dp.svg"></div>
+                              <div class="d-flex align-items-center ml-3"><img src="./assets/images/SVG/header_user_dp.svg"></div>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                               <a class="dropdown-item" href="#">My Profile</a>
